--- a/naunet/templates/base/cpp/src/naunet_constants.cpp.j2
+++ b/naunet/templates/base/cpp/src/naunet_constants.cpp.j2
@@ -29,6 +29,9 @@ __constant__ double echarge         = 4.80320425e-10;
 // Boltzmann constant (erg/K)
 __constant__ double kerg            = 1.380658e-16;
 
+// reduced Planck constant
+__constant__ double hbar            = 1.054571726e-27;
+
 {% for c, cv in network.consts.items() %}
 __constant__ double {{ c }} = {{ cv }};
 {% endfor %}
@@ -59,6 +62,9 @@ const double echarge         = 4.80320425e-10;
 
 // Boltzmann constant (erg/K)
 const double kerg            = 1.380658e-16;
+
+// reduced Planck constant
+const double hbar            = 1.054571726e-27;
 
 {% for c, cv in network.consts.items() %}
 const double {{ c }} = {{ cv }};
