--- a/naunet/templates/cvode/src/naunet_jac.cpp.j2
+++ b/naunet/templates/cvode/src/naunet_jac.cpp.j2
@@ -61,8 +61,9 @@ __global__ void JacKernel(realtype *y, realtype *data, NaunetData *d_udata,
         NaunetData *udata      = &d_udata[cur];
 
         // clang-format off
-        {% for v in network.varis.keys() -%}
-            realtype {{ v }} = udata->{{ v }};
+        {% set components = network.reactions + network.grains + network.heating + network.cooling -%}
+        {% for key, _ in components | collect_variable_items("params") -%}
+            realtype {{ key }} = udata->{{ key }};
         {% endfor %}
         
 #if (NHEATPROCS || NCOOLPROCS)
@@ -99,8 +100,9 @@ int Jac(realtype t, N_Vector u, N_Vector fu, SUNMatrix jmatrix, void *user_data,
     realtype *y            = N_VGetArrayPointer(u);
     NaunetData *u_data     = (NaunetData *)user_data;
     // clang-format off
-    {% for v in network.varis.keys() -%}
-        realtype {{ v }} = u_data->{{ v }};
+    {% set components = network.reactions + network.grains + network.heating + network.cooling -%}
+    {% for key, _ in components | collect_variable_items("params") -%}
+        realtype {{ key }} = u_data->{{ key }};
     {% endfor %}
     
 #if (NHEATPROCS || NCOOLPROCS)
@@ -143,8 +145,9 @@ int Jac(realtype t, N_Vector u, N_Vector fu, SUNMatrix jmatrix, void *user_data,
     NaunetData *u_data     = (NaunetData *)user_data;
 
     // clang-format off
-    {% for v in network.varis.keys() -%}
-        realtype {{ v }} = u_data->{{ v }};
+    {% set components = network.reactions + network.grains + network.heating + network.cooling -%}
+    {% for key, _ in components | collect_variable_items("params") -%}
+        realtype {{ key }} = u_data->{{ key }};
     {% endfor %}
     
 #if (NHEATPROCS || NCOOLPROCS)
