--- a/naunet/templates/base/cpp/include/naunet_data.h.j2
+++ b/naunet/templates/base/cpp/include/naunet_data.h.j2
@@ -2,8 +2,9 @@
 // Struct for holding the nessesary additional variables for the problem.
 struct NaunetData {
     // clang-format off
-    {% for var, val in network.varis.items() -%}
-        double {{ var }}{{ "" if val is none else " = %5.3e" | format(val) }};
+    {% set components = network.reactions + network.grains + network.heating + network.cooling -%}
+    {% for key, value in components | collect_variable_items("params") -%}
+        double {{ key }}{{ "" if value is none else " = %5.3e" | format(value) }};
     {% endfor %}
 
     // clang-format on
