--- a/naunet/templates/cvode/src/naunet_fex.cpp.j2
+++ b/naunet/templates/cvode/src/naunet_fex.cpp.j2
@@ -34,13 +34,11 @@ __global__ void FexKernel(realtype *y, realtype *ydot, NaunetData *d_udata,
         NaunetData *udata      = &d_udata[cur];
 
         // clang-format off
-        {% for v in network.varis.keys() -%}
-            realtype {{ v }} = udata->{{ v }};
+        {% set components = network.reactions + network.grains + network.heating + network.cooling -%}
+        {% for key, _ in components | collect_variable_items("params") -%}
+            realtype {{ key }} = u_data->{{ key }};
         {% endfor %}
 
-        {% for v in network.locvars -%}
-            {{ v }};
-        {% endfor %}
         
 #if (NHEATPROCS || NCOOLPROCS)
         if (mu < 0) mu = GetMu(y_cur);
@@ -82,13 +80,11 @@ int Fex(realtype t, N_Vector u, N_Vector udot, void *user_data) {
     realtype *ydot         = N_VGetArrayPointer(udot);
     NaunetData *u_data     = (NaunetData *)user_data;
     // clang-format off
-    {% for v in network.varis.keys() -%}
-        realtype {{ v }} = u_data->{{ v }};
+    {% set components = network.reactions + network.grains + network.heating + network.cooling -%}
+    {% for key, _ in components | collect_variable_items("params") -%}
+        realtype {{ key }} = u_data->{{ key }};
     {% endfor %}
 
-    {% for v in network.locvars -%}
-        {{ v }};
-    {% endfor %}
 
 #if (NHEATPROCS || NCOOLPROCS)
     if (mu < 0) mu = GetMu(y);
