--- a/naunet/templates/cvode/src/naunet_fex.cpp.j2
+++ b/naunet/templates/cvode/src/naunet_fex.cpp.j2
@@ -36,7 +36,7 @@ __global__ void FexKernel(realtype *y, realtype *ydot, NaunetData *d_udata,
         // clang-format off
         {% set components = network.reactions + network.grains + network.heating + network.cooling -%}
         {% for key, _ in components | collect_variable_items("params") -%}
-            realtype {{ key }} = u_data->{{ key }};
+            realtype {{ key }} = udata->{{ key }};
         {% endfor %}
 
         
