--- a/naunet/templates/cvode/src/naunet_jac.cpp.j2
+++ b/naunet/templates/cvode/src/naunet_jac.cpp.j2
@@ -65,6 +65,11 @@ __global__ void JacKernel(realtype *y, realtype *data, NaunetData *d_udata,
         {% for key, _ in components | collect_variable_items("params") -%}
             realtype {{ key }} = udata->{{ key }};
         {% endfor %}
+
+        {% set components = network.heating + network.cooling -%}
+        {% for key, value in components | collect_variable_items("deriveds") -%}
+            realtype {{ key }} = {{ value }};
+        {% endfor %}
         
 #if (NHEATPROCS || NCOOLPROCS)
         if (mu < 0) mu = GetMu(y_cur);
@@ -103,6 +108,11 @@ int Jac(realtype t, N_Vector u, N_Vector fu, SUNMatrix jmatrix, void *user_data,
     {% set components = network.reactions + network.grains + network.heating + network.cooling -%}
     {% for key, _ in components | collect_variable_items("params") -%}
         realtype {{ key }} = u_data->{{ key }};
+    {% endfor %}
+
+    {% set components = network.heating + network.cooling -%}
+    {% for key, value in components | collect_variable_items("deriveds") -%}
+        realtype {{ key }} = {{ value }};
     {% endfor %}
     
 #if (NHEATPROCS || NCOOLPROCS)
@@ -148,6 +158,11 @@ int Jac(realtype t, N_Vector u, N_Vector fu, SUNMatrix jmatrix, void *user_data,
     {% set components = network.reactions + network.grains + network.heating + network.cooling -%}
     {% for key, _ in components | collect_variable_items("params") -%}
         realtype {{ key }} = u_data->{{ key }};
+    {% endfor %}
+
+    {% set components = network.heating + network.cooling -%}
+    {% for key, value in components | collect_variable_items("deriveds") -%}
+        realtype {{ key }} = {{ value }};
     {% endfor %}
     
 #if (NHEATPROCS || NCOOLPROCS)
