--- a/naunet/templates/tests/cloud/CMakeLists.txt.j2
+++ b/naunet/templates/tests/cloud/CMakeLists.txt.j2
@@ -3,3 +3,7 @@
     singlegrid
     renorm
 {% endblock targets -%}
+{% block pytargets -%}
+            singlegrid
+            renorm
+{% endblock pytargets -%}
