--- a/naunet/templates/cvode/src/naunet_jac.cpp.j2
+++ b/naunet/templates/cvode/src/naunet_jac.cpp.j2
@@ -66,7 +66,7 @@ __global__ void JacKernel(realtype *y, realtype *data, NaunetData *d_udata,
             realtype {{ key }} = udata->{{ key }};
         {% endfor %}
 
-        {% set components = network.heating + network.cooling -%}
+        {% set components = network.reactions + network.grains + network.heating + network.cooling -%}
         {% for key, value in components | collect_variable_items("deriveds") -%}
             realtype {{ key }} = {{ value }};
         {% endfor %}
@@ -110,7 +110,7 @@ int Jac(realtype t, N_Vector u, N_Vector fu, SUNMatrix jmatrix, void *user_data,
         realtype {{ key }} = u_data->{{ key }};
     {% endfor %}
 
-    {% set components = network.heating + network.cooling -%}
+    {% set components = network.reactions + network.grains + network.heating + network.cooling -%}
     {% for key, value in components | collect_variable_items("deriveds") -%}
         realtype {{ key }} = {{ value }};
     {% endfor %}
@@ -160,7 +160,7 @@ int Jac(realtype t, N_Vector u, N_Vector fu, SUNMatrix jmatrix, void *user_data,
         realtype {{ key }} = u_data->{{ key }};
     {% endfor %}
 
-    {% set components = network.heating + network.cooling -%}
+    {% set components = network.reactions + network.grains + network.heating + network.cooling -%}
     {% for key, value in components | collect_variable_items("deriveds") -%}
         realtype {{ key }} = {{ value }};
     {% endfor %}
