--- a/naunet/templates/cvode/src/naunet_fex.cpp.j2
+++ b/naunet/templates/cvode/src/naunet_fex.cpp.j2
@@ -39,7 +39,7 @@ __global__ void FexKernel(realtype *y, realtype *ydot, NaunetData *d_udata,
             realtype {{ key }} = udata->{{ key }};
         {% endfor %}
 
-        {% set components = network.reactions + network.heating + network.cooling -%}
+        {% set components = network.reactions + network.grains + network.heating + network.cooling -%}
         {% for key, value in components | collect_variable_items("deriveds") -%}
             realtype {{ key }} = {{ value }};
         {% endfor %}
@@ -89,7 +89,7 @@ int Fex(realtype t, N_Vector u, N_Vector udot, void *user_data) {
         realtype {{ key }} = u_data->{{ key }};
     {% endfor %}
 
-    {% set components = network.reactions + network.heating + network.cooling -%}
+    {% set components = network.reactions + network.grains + network.heating + network.cooling -%}
     {% for key, value in components | collect_variable_items("deriveds") -%}
         realtype {{ key }} = {{ value }};
     {% endfor %}
