--- a/naunet/templates/odeint/src/naunet_ode.cpp.j2
+++ b/naunet/templates/odeint/src/naunet_ode.cpp.j2
@@ -134,7 +134,7 @@ void Fex::operator()(const vector_type &abund, vector_type &ydot, double t) {
     if (gamma < 0) gamma = GetGamma(y);
 #endif
 
-    {% set components = network.reactions + network.heating + network.cooling -%}
+    {% set components = network.reactions + network.grains + network.heating + network.cooling -%}
     {% for key, value in components | collect_variable_items("deriveds") -%}
         double {{ key }} = {{ value }};
     {% endfor %}
@@ -195,7 +195,7 @@ void Jac::operator()(const vector_type &abund, matrix_type &j, const double &t,
         double {{ key }} = u_data->{{ key }};
     {% endfor %}
 
-    {% set components = network.heating + network.cooling -%}
+    {% set components = network.reactions + network.grains + network.heating + network.cooling -%}
     {% for key, value in components | collect_variable_items("deriveds") -%}
         double {{ key }} = {{ value }};
     {% endfor %}
